# homeworks_internships

./: README.md
CENG111 - Introduction to Computer Eng. Concepts/: README.md
CENG111 - Introduction to Computer Eng. Concepts/THE 2/: the2.py
CENG111 - Introduction to Computer Eng. Concepts/THE 3/: the3.py
CENG111 - Introduction to Computer Eng. Concepts/THE 4/: the4.py
CENG213 - Data Structures/: README.md
CENG213 - Data Structures/THE 1/: Main.cpp
CENG222 - Statistical Methods for Computer Engineering/: README.md
CENG222 - Statistical Methods for Computer Engineering/THE 4/: Hw4.m
CENG232 - Logic Design/: README.md
CENG240 - C Programming/THE 1/: Derivative.c  Fibonacci.c  Run-Length.c  SimpleCalculator.c
CENG240 - C Programming/THE 2/: Mean-Optimization.c  One-Dimensional-Convolution.c  Painters-Algorithm.c
CENG242 - Programming Language Concepts/: README.md
CENG315 - Algorithms/: README.md
CENG331 - Computer Organization/: README.md
CENG334 - Introduction to Operating Systems/: README.md
CENG336 - Intro.to Embedded Systems Development/: README.md
CENG350 - Software Engineering/: README.md
CENG351 - Data Management and File Structures/: README.md
CENG403 - Deep Learning/: CENG403_2025_Spring_THE1.ipynb  CENG403_2025_Spring_THE2.ipynb
CENG443 - Object Oriented Programming/: README.md
CENG469 - Computer Graphics 2/: README.md
CENG477 - Computer Graphics 1/tetrisGL/: .gitignore  CMakeLists.txt  GameConstants.h  GameState.cpp  GameState.h  Makefile  callbackHandler.cpp  callbackHandler.h  main.cpp
SRDC - Internship/: README.md
(+590 files in other folders)
